force-app/main/default/objects/InSituGen__InSitu_AS_FieldList_Value__c/InSituGen__InSitu_AS_FieldList_Value__c.object-meta.xml
<CustomObject>
    <description>An iTools Configuration Manager custom object that contains information about Salesforce.com fields used in the value of an iTool FieldList setting.</description>
    <label>iTools FieldList Value</label>
    <nameField>
        <displayFormat>ASFLV-{0000000}</displayFormat>
        <label>App Setting FieldList Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>iTools FieldList Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>