force-app/main/default/objects/InSituGen__InSitu_AS_FieldList_Value__c/fields/InSituGen__API_Name__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__API_Name__c</fullName>
    <label>API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>