force-app/main/default/objects/InSituGen__InSitu_AS_FieldList_Value__c/fields/InSituGen__Application_Setting__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Application_Setting__c</fullName>
    <label>Application Setting</label>
    <referenceTo>InSituGen__InSitu_AppSetting__c</referenceTo>
    <relationshipName>App_Setting_FieldList_Values</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>