force-app/main/default/objects/InSituGen__InSitu_AS_FieldList_Value__c/fields/InSituGen__Label__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Label__c</fullName>
    <description>The label to be used for this instance of the field.  This value does NOT have to be the same value as the field definition.  Storing this value bot allows a different, often shorter, version of the label to be used as well as saving expensive describe calls.</description>
    <label>Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>