force-app/main/default/objects/InSituGen__InSitu_AS_FieldList_Value__c/fields/InSituGen__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Sort_Order__c</fullName>
    <description>Value used to order a set of fields that make up an app setting.  Smaller numbers will place the field value closer to the beginning of the list of fields.  Fields with the same sort order will be ordered alphabetical by label.</description>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>