force-app/main/default/objects/InSituGen__InSitu_AS_FieldList_Value__c/fields/InSituGen__Type__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Type__c</fullName>
    <description>The data type of the field.  This should contain the string version of the value returned from a type() call on a field object.</description>
    <label>Type</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>